--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+a.button {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.a:hover {
+  background-color: #ddd;
+  color: black;
+}
+</style>
+</head>
+<body>
+
+<h2>Homemade Open Skribble</h2>
+<form action="/action_page.php">
+  <label for="fname">Enter your name:</label><br>
+  <input type="text" id="fname" name="fname" value="Name"><br>
+</form> 
+
+
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Start playing Open Skribble!</a>
+</body>
+</html>
